@@ -10,38 +10,51 @@
 
     <repositories>
         <repository>
-            <id>eviware</id>
-            <name>Eviware Maven2 Repository</name>
-            <url>http://www.eviware.com/repository/maven2</url>
+            <id>atlassian-public</id>
+            <url>https://packages.atlassian.com/mvn/maven-external/</url>
+        </repository>
+        <repository>
+            <id>SoapUI_M2</id>
+            <name>SoapUI/ReadyAPI maven</name>
+            <url>https://rapi.tools.ops.smartbear.io/nexus/content/groups/public/</url>
         </repository>
         <repository>
             <id>central</id>
             <name>Central Maven2 Repository</name>
-            <url>http://repo1.maven.org/maven2</url>
+            <url>https://repo1.maven.org/maven2</url>
         </repository>
     </repositories>
 
     <build>
+        <sourceDirectory>src/main/java</sourceDirectory>
+
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>11</source>
+                    <target>11</target>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>
+                            java.desktop/sun.swing=ALL-UNNAMED,java.security.jgss/sun.security.jgss=ALL-UNNAMED,java.base/sun.net.spi=ALL-UNNAMED,java.desktop/sun.awt=ALL-UNNAMED,java.base/sun.security.x509=ALL-UNNAMED
+                        </arg>
+                    </compilerArgs>
                     <compilerId>groovy-eclipse-compiler</compilerId>
                 </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-compiler</artifactId>
-                        <version>2.8.0-01</version>
+                        <version>3.5.0-sb-fixed</version>
                     </dependency>
                     <dependency>
                         <groupId>org.codehaus.groovy</groupId>
                         <artifactId>groovy-eclipse-batch</artifactId>
-                        <version>2.1.8-01</version>
+                        <version>2.4.17-02</version>
                     </dependency>
                 </dependencies>
             </plugin>
@@ -64,40 +77,14 @@
             <version>1.5</version>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>swingx</groupId>
-            <artifactId>swingx</artifactId>
-            <version>soapui</version>
-        </dependency>
-        <dependency>
             <groupId>com.smartbear</groupId>
             <artifactId>ready-api-soapui-pro</artifactId>
-            <version>1.5.0</version>
+            <version>3.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.smartbear</groupId>
             <artifactId>ready-api-soapui-ng</artifactId>
-            <version>1.2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.smartbear</groupId>
-            <artifactId>loadui-ui</artifactId>
-            <version>1.2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.smartbear</groupId>
-            <artifactId>ready-api-security</artifactId>
-            <version>1.2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>com.smartbear</groupId>
-            <artifactId>ready-api-service-v</artifactId>
-            <version>1.2.2</version>
+            <version>3.2.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.atlassian.jira</groupId>
